Enhance project structure and functionality
- Updated .gitignore to exclude the instance directory and additional log files.
- Added GEMINI.md for project configuration details and conventions.
- Introduced health_check.py for verifying component configurations and dependencies.
- Created manage_memory.py for memory management tasks, including backup and restore functionalities.
- Refactored database path handling in init_db.py, read_db.py, and other scripts to use the instance directory.
- Added setup_dev.sh for streamlined development environment setup.
- Implemented start_telegram.sh and start_web.sh for easy bot and web UI launching.
- Enhanced README.md with setup instructions and usage guidelines.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+# Environment
 venv/
-app/amy_memory.db
 .env
-*.sqlite
-*.db
-*.log
-llm_request_log.txt
+
+# Instance folder (for database, logs, etc.)
+instance/
+
+# Python cache
 *.pyc
 __pycache__/
+
+# Log files
+*.log
+llm_request_log.txt
