--- a/app/integrations/web/grok-mimic/package.json
+++ b/app/integrations/web/grok-mimic/package.json
@@ -10,8 +10,12 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.525.0",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -41,6 +45,14 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^16.3.0"
+    "@testing-library/react": "^16.3.0",
+    "@types/jspdf": "^1.3.3"
+  },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "resolve-url-loader": {
+      "postcss": "^8.4.31"
+    },
+    "webpack-dev-server": "^5.0.4"
   }
 }
