--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,54 @@
 # Environment
 venv/
 .env
+.env.local
+.env.*.local
 
 # Instance folder (for database, logs, etc.)
 instance/
+agent_logs/
 
 # Python cache
-*.pyc
 __pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
+.coverage
+htmlcov/
+.nox/
+.tox/
+.hypothesis/
+
+# Package Management
+.installed.cfg
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Development Tools
+.cursor/
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# MacOS specific
+.DS_Store
+Thumbs.db
+
+# Large dependency directories
+node_modules/
+.conda/
+.anaconda/
 
 # Log files
 *.log
-wiki
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Databases
+*.db
+*.sqlite
+
+# ADK specific
+.adk/
