--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core ADK and AI dependencies
-google-adk==1.5.0
+google-adk==1.22.1
 google-genai==1.24.0
 google-generativeai==0.8.5
 
@@ -37,4 +37,4 @@ googlesearch-python==1.2.3
 
 # Vector embeddings (for future use)
 sentence-transformers==2.2.2  # For semantic embeddings
-numpy==1.24.3  # Required for embeddings
+numpy==1.24.3  # Required for embeddingsaiosqlite==0.22.1
