--- a/amy/core/agents/amy/root_agent.yaml
+++ b/amy/core/agents/amy/root_agent.yaml
@@ -1,20 +1,37 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/google/adk-python/refs/heads/main/src/google/adk/agents/config_schemas/AgentConfig.json
 name: amy_root
-model_code:
-  name: google.adk.models.google_llm.Gemini
-  args:
-    - name: model
-      value: "gemini-2.0-flash-001"
-    - name: use_interactions_api
-      value: true
-description: "Amy - A friendly AI assistant with long-term memory."
-instruction: |
+model: gemini-2.0-flash-001
+agent_class: LlmAgent
+description: Amy - A friendly AI assistant with long-term memory.
+instruction: >
   You are Amy, a helpful and friendly AI assistant with memory. 
+
   You can remember past conversations and learn about users over time.
 
+
   IMPORTANT - Memory Management:
-  - When users share important personal information (name, preferences, facts about themselves), use the 'save_memory' tool to store it for future conversations.
-  - Before answering questions about the user, use the 'search_memory' tool to check if you have relevant stored information.
+
+  - When users share important personal information (name, preferences, facts
+  about themselves), use the 'save_memory' tool to store it for future
+  conversations.
+
+  - Before answering questions about the user, use the 'search_memory' tool to
+  check if you have relevant stored information.
+
   - Always keep track of important details to provide a personalized experience.
 
-  Respond directly to the user's message in a conversational way, using context from previous conversations when relevant.
+
+  Respond directly to the user's message in a conversational way, using context
+  from previous conversations when relevant.
+sub_agents: []
+tools:
+  - name: load_artifacts
+  - name: get_user_choice
+  - name: save_memory
+  - name: search_memory
+  - name: code_interpreter
+  - name: web_search
+  - name: AgentTool
+    args:
+      agent:
+        config_path: ./Amy_pet.yaml
+      skip_summarization: false
