--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ google-generativeai==0.8.5
 
 # Memory system
 mem0ai==0.1.114  # For LTM vector/graph memory
+chromadb==0.6.3  # Required for Mem0 local storage
 
 # Audio processing
 openai-whisper==20231117  # For audio transcription
@@ -22,6 +23,7 @@ uvicorn==0.35.0
 
 # Database
 SQLAlchemy==2.0.41
+aiosqlite==0.22.1
 
 # HTTP and networking
 httpx==0.28.1
@@ -32,9 +34,11 @@ python-multipart==0.0.20
 pytest==8.2.2
 
 # Web Search
-# Web Search
 googlesearch-python==1.2.3
 
 # Vector embeddings (for future use)
 sentence-transformers==2.2.2  # For semantic embeddings
-numpy==1.24.3  # Required for embeddingsaiosqlite==0.22.1
+numpy==1.24.3  # Required for embeddings
+
+# Observability
+freeplay-python-adk==0.2.2  # For ADK observability
